# vrk

./: LICENSE  README.md  pyproject.toml
demos/: demo_2d_gaussian.py  demo_2d_mixed.py  demo_bernoulli.py  demo_evidence_comparison.py  demo_exponential_noise.py  demo_gaussian.py  demo_gradient_comparison.py  demo_gumbel.py  demo_kl_divergence.py  demo_mixed_likelihood_fixed.py  demo_mixed_likelihood_optimised.py  demo_per_point_likelihood.py  demo_poisson.py  demo_scoring_modes.py  demo_student_t.py
examples/: example_exponential.py  example_gaussian.py  example_spherical.py
paper_experiments/: README.md  create_observation_files.py  hyperparameter_experiment.py  neon_experiment.py  neon_multiseed.py
paper_experiments/data/neon_harv/: experiment_meta.json  gps_observations.csv  lidar_observations.csv  rtk_observations.csv
vrk/: __init__.py
vrk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vrk/core/: __init__.py  cholesky_utils.py  vrk.py
vrk/covariance/: __init__.py  base.py  exponential.py  gaussian.py  matern52.py  nugget.py  spherical.py  sum.py
vrk/likelihoods/: __init__.py  base.py  bernoulli.py  exponential_noise.py  exponential_noise_alternatives.py  exponential_noise_gh.py  gaussian.py  gumbel.py  poisson.py  student_t.py
vrk/optimization/: __init__.py  hyperparameters.py
vrk/tests/: test_analytic_gradient.py  test_covariances.py  test_integration.py  test_likelihoods.py  test_spherical.py
