[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vrk"
version = "0.1.0"
description = "Variable Rank Kriging — sparse GP with EP for geostatistics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ben Ingram", email = "ingrambr@gmail.com"},
]
keywords = [
    "gaussian-process", "kriging", "geostatistics",
    "expectation-propagation", "sparse-gp", "spatial-statistics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/bioingrambr/vrk"
"Bug Tracker" = "https://github.com/bioingrambr/vrk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vrk*"]
